--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"way/generators": "~2.0",
+		"fzaninotto/faker" : "1.5.*@dev",
+		"intervention/image": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
